[package]
name = "macroquad_android"
version = "0.1.0"
edition = "2024"

[patches.crates-io]
miniquad = { git = 'https://github.com/Spector-Studios/miniquad.git' }

[dependencies]
macroquad = "0.4.14"

[package.metadata.android]
package_name = "dev.spectorstudios.macroquad_android"
label = "Macro Test"

[package.metadata.android.activity_attributes]
"android:exported" = "true"
